--- a/resources/template.html
+++ b/resources/template.html
@@ -5,9 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Vega Preview</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--<meta http-equiv="Content-Security-Policy" content="default-src 'none'; img-src vscode-resource: https:; script-src vscode-resource: https:; style-src vscode-resource:;">-->
+  <!--<script src="vscode-resource:/vega.js"></script>
+  <script src="vscode-resource:/vega-lite.js"></script>
+  <script src="vscode-resource:/vega-embed.js"></script>-->
+  
+  <script src="https://cdn.jsdelivr.net/npm/vega@4.3.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@3.0.0-rc8"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@3.20.0"></script>
 </head>
 <body>
-
+<p>Declannnnnnnn!</p>
   <style>
     body {
       background: white;
@@ -45,5 +53,25 @@
       <div id="errors">This is the placeholder for the errors.</div>
     </div>
   </div>
+<div id="vis"></div>
+  <script type="text/javascript">
+  var yourVlSpec = {
+      "$schema": "https://vega.github.io/schema/vega-lite/v2.0.json",
+      "description": "A simple bar chart with embedded data.",
+      "data": {
+        "values": [
+          {"a": "A","b": 208}, {"a": "B","b": 505}, {"a": "C","b": 900},
+          {"a": "D","b": 91}, {"a": "E","b": 81}, {"a": "F","b": 53},
+          {"a": "G","b": 19}, {"a": "H","b": 87}, {"a": "I","b": 52}
+        ]
+      },
+      "mark": "bar",
+      "encoding": {
+        "x": {"field": "a", "type": "ordinal"},
+        "y": {"field": "b", "type": "quantitative"}
+      }
+    }
+    vegaEmbed("#vis", yourVlSpec);
+    </script>
 </body>
 </html>
